Fri Jul 25 14:08:09 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Event/EC*.h:
          Added /**/ before the include of event_export.h so that this file
          isn't added to the doxygen include hierarchy pictures. This will
          make the pictures simpler.

Fri Jul 25 08:21:28 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/Exception.h: Fix for the undefined symbol error that showed
	  up in our daily builds. Strange that it never showed up in my
	  workspace before I checked stuff in.

Fri Jul 25 13:09:56 UTC 2003  Johnny Willlemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Event/EC_Gateway_IIOP.cpp:
        * orbsvcs/orbsvcs/Event/EC_Gateway_IIOP.h:
          Extended the gateway with a factory and a consumer event channel
          control. With this control the behaviour when a misbehaving consumer
          ec is detected can be controlled.

        * orbsvcs/orbsvcs/Event/EC_Gateway_IIOP_Factory.cpp:
        * orbsvcs/orbsvcs/Event/EC_Gateway_IIOP_Factory.h:
          New factory for the options of the IIOP Gateway.

        * orbsvcs/orbsvcs/Event/ECG_Defaults.h:
          Added the defaults for the new controls

        * orbsvcs/orbsvcs/Event/ECG_ConsumerEC_Control.cpp:
        * orbsvcs/orbsvcs/Event/ECG_ConsumerEC_Control.h:
        * orbsvcs/orbsvcs/Event/ECG_ConsumerEC_Control.i:
          Default control that just ignores any error and continues as normal.
          This is exactly the same as the behaviour of the IIOP Gateway before
          this checkin. Is selected by not setting -ECGIIOPConsumerECControl or
          setting it to null.

        * orbsvcs/orbsvcs/Event/ECG_Reactive_ConsumerEC_Control.cpp:
        * orbsvcs/orbsvcs/Event/ECG_Reactive_ConsumerEC_Control.h:
        * orbsvcs/orbsvcs/Event/ECG_Reactive_ConsumerEC_Control.i:
          A reactive control that disconnects the consumer event channel in