@@ -1,3 +1,15 @@
+Fri Jul 25 13:15:36 2003  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+        * tests/Param_Test/except.cpp:
+        * tests/Param_Test/param_test_i.cpp:
+
+          Changed the logic inside the catch blocks of 
+          Test_Exception::dii_req_invoke and Test_Exception::run_sii_test.
+          Changes in progress to TAO's exception classes have been
+          producing errors in exception handling that were not caught
+          by this test. Also made slight change to the servant method,
+          a change to the type of a local variable.
+
 Fri Jul 25 14:08:09 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * orbsvcs/orbsvcs/Event/EC*.h:
